test/sema/methods/ptr_receiver.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn foo(self: *Self) {}

  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn bar(self: *mut Self) {}
}

fn main() {}
